Remove SSL from shopping cart link

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <a href="http://jamesbubb.uk/angular-phonebook" class="btn link">See the demo</a>
       </div><!--
       --><div class="col">
-      <h3><a href="https://jamesbubb.uk/shopping_cart">Shopping Cart</a></h3>
-      <a href="https://jamesbubb.uk/shopping_cart"><img src="img/shopping_cart.jpg" alt="Shopping Carts"></a>
+      <h3><a href="http://jamesbubb.uk/shopping_cart">Shopping Cart</a></h3>
+      <a href="http://jamesbubb.uk/shopping_cart"><img src="img/shopping_cart.jpg" alt="Shopping Carts"></a>
       <p>I followed a design I found on <a href="https://dribbble.com">dribble.com</a> and challenged myself to recreate some of the functionality.</p><p>It was challenging trying to resize background images within the hover state.</p>
       <a href="http://jamesbubb.uk/shopping_cart" class="btn link">See the demo</a>
     </div>
