Fix typo on homepage

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <section id="hero">
     <h1 class="title">James Bubb</h1>
-    <p class="subtitle">Junior Front End Developerr</p>
+    <p class="subtitle">Junior Front End Developer</p>
     <a href="#about"><img class="expand" src="expand.png" alt="Expand"></a>
   </section>
   <section id="about">
